# simulation-project

./: .gitignore  Dockerfile  README.md  deploy.sh  dev_requirements.txt  notes.md  pyproject.toml  setup.sh
latex/: freebus.tex  simulation.bib
notebooks/: Traffic Experiments.ipynb  demand-modeling.ipynb
scripts/: benchmark.py  convert_schedule.py  forever_simulate.sh  simulate.sh
src/freebus/: __init__.py  experiments.py  main.py  measure.py  pert-sampler.py  pert_sampler.py  randomvar.py  results.py  trial.py  types.py
test/: conftest.py
test/functional/: test_cli.py
test/integration/: test_consistency.py
test/unit/: test_estimate.py  test_experiments.py  test_measure.py  test_options.py  test_randomvar.py  test_trial.py  test_unit.py
