[build-system]
requires = ["setuptools",]
build-backend = "setuptools.build_meta"

[project]
name = "freebus"
version = "0.1.3"
dependencies = [
    'numpy',
    'pyyaml'
]

[project.scripts]
fbsimulate = 'freebus:main.cli_entry'
fbtabulate = 'freebus:results.cli_entry'

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
    ]
pythonpath = "src"
