[build-system]
requires = ["setuptools",]
build-backend = "setuptools.build_meta"

[project]
name = "freebus"
version = "0.2.0"
dependencies = [
    'numpy',
    'scipy'
]

[project.scripts]
fbsimulate = 'freebus:main.cli_entry'
fbtabulate = 'freebus:results.cli_entry'

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
    ]
pythonpath = "src"
