[build-system]
requires = ["setuptools",]
build-backend = "setuptools.build_meta"

[project]
name = "freebus"
version = "0.5.0"
dependencies = [
    'numpy',
    'scipy'
]

[project.scripts]
fbsimulate = 'freebus:main.cli_entry'
fbplot = 'freebus:results.cli_entry'
fbseries = 'freebus:pert_sampler.cli_entry'

[tool.pylint.main]
ignore-patterns = ["^\\.#"]
[tool.pylint.basic]
good-names = ["i", "j", "k", "ex", "Run", "_"]
[tool.pylint."messages control"]
disable = ['too-many-instance-attributes', 'too-many-arguments', 'too-few-public-methods']

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
    ]
pythonpath = "src"
